# cross_chain_messaging

./: Cargo.toml  Readme.md
config/: RelayerSDK.js  alers_manager.yml  deloyment.yml  fabric_connection.yaml  hardhat.config.js  prometheus.yml
scripts/: deploy.js
src/: main.rs
src/blockchain/: chain_selector.rs  eth.rs  mod.rs
src/chaincode/: MessageAuditing.go  message_chaincode.go
src/contracts/: GovernanceToken.sol  MessageAuditor.sol  MessagingStorage.sol  MultisigMessageAuditor.sol  RelayerConsensus.sol  RelayerGovernance.sol
src/encryption/: mod.rs
src/pallet/: pallet-crosschain.rs
src/relayer/: cosmos_relayer.rs  decentralized_relayer.rs  evm_to_substrate.rs  fabric_handler.rs  merkle_proofs.rs  message_routing.rs  multi_chain_listener.rs  multi_chain_relayer.rs  retry.rs  security.rs  solana_relayer.rs  transaction_batching.rs
src/storage/: mod.rs
src/ui/: mod.rs
src/ui/components/: chain_selector.rs  message_input.rs  message_thread.rs  status.rs  wallet.rs
src/ui/src/frontend/: RelayerDashboard.js
src/ui/static/: style.css  wallet_connect.js
src/wallet/: mod.rs
